change db to pgadmin

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ squirrel-be/Squirrel.Presentation/bin
 squirrel-be/Squirrel.Presentation/obj
 squirrel-be/Squirrel.Infrastructure/obj
 squirrel-be/Squirrel.Domain/obj
+squirrel-be/.cr
