--- a/squirrel-be/Squirrel.Presentation/appsettings.Development.json
+++ b/squirrel-be/Squirrel.Presentation/appsettings.Development.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SquirrelDB": "Data Source=103.167.88.245; Initial Catalog=Squirrel_Dev; User ID=sa; Password=An@123; TrustServerCertificate=True;"
+    "SquirrelDB": "Server=103.167.88.245; Port=5432; Database=Squirrel_Dev; User ID=user1; Password=User@123;"
   },
   "LogFilePath": "SquirrelProjectLogs/logs.log",
   "FtpServer": {
-    "Directory": "E:/SquirrelProject/Files/"
+    "Directory": "Files/"
   },
   "SmtpMailConfig": {
     "Host": "",
