--- a/squirrel-be/Squirrel.Presentation/appsettings.Staging.json
+++ b/squirrel-be/Squirrel.Presentation/appsettings.Staging.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SquirrelDB": "Data Source=WIN-PS0T1H1N9KK ; Initial Catalog=Squirrel; User ID=sa; Password=An@651234;; TrustServerCertificate=True;"
+    "SquirrelDB": "Server=103.167.88.245; Port=5432; Database=Squirrel_Dev; User ID=user1; Password=User@123;"
   },
   "LogFilePath": "../Files/Logs/logs.log",
   "FtpServer": {
